# planejamento_financeiro

./: .gitignore  .~lock.Sem título 1.ods#  .~lock.medalhas_por_Ano.xlsx#  LICENSE  README.md  Sem título 1.ods  main.py  medalhas_por_Ano.xlsx  mista.py  mista2.py  obmep.py  populacao.py  premiados_obmep.py  previdencia.py  pyproject.toml  streamlitSenbilidade.sh  tabela_sensibilidade.py
avaliacoes/: prova.tex
avaliacoes/questoes/: _all.R  exemplo.tex
listaExercicios/: exercicios.tex
listaExercicios/assunto/: exemplo.tex
planejamento_aposentadoria/: .gitignore  planejamento_aposentadoria.py
planejamento_aposentadoria/preambulos/: preamble.tex  preamblePortugues.tex
planejamento_aposentadoria/slides/: main.pdfsync
planejamento_aposentadoria/tikz/: diagrama1.tex  dobra4.tex  pai_rico.tex
preambulos/: preamble.tex  preambleBeamer.tex  preambleExam.tex  preambleTikz.tex
presentation/: Metropolis.css  _quarto.yml  dobra.py  index.html  index.qmd  main.pptx  main.qmd  style.css  teste.qmd
presentation/assuntos/: comeco.qmd  diagnostico.qmd  dividas.qmd  educacao.qmd  fundamentos.qmd  introducao.qmd  investimentos.qmd  livros.qmd  mao_na_massa.qmd  moradia.qmd  motivacao.qmd  o_que_evitar.qmd  objetivos.qmd  por_onde_comecar.qmd  poupar.qmd  previdencia.qmd  reserva.qmd  sonhos.qmd  sumario.qmd
slides/: figuras  main.aux  main.nav  main.out  main.pdfsync  main.snm  main.tex  main.toc  preambulos  streamlitSenbilidade.sh
tikz/: elipse.tex  hiperbole.tex  parabHiperbolico.tex  picture.aux  picture.pdfsync  picture.run.xml  picture.tex
(+18 files in other folders)
