[project]
name = "planejamento-aposentadoria"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Lemes"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "streamlit>=1.43.2,<2.0.0",
    "numpy>=2.2.4,<3.0.0",
    "bs4>=0.0.2,<0.0.3",
    "plotly>=6.0.1,<7.0.0",
    "lxml>=5.3.1,<6.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "matplotlib>=3.10.1,<4.0.0",
    "watchdog (>=6.0.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

